# too-many-repos

./: README.rst  TODO.md  pyproject.toml  setup.py
docs/: cache.rst
repomgr/: __main__.py  repomgr.py
tests/: test_gist.py  test_repomgr.py  test_tmrconfig.py  test_tmrignore.py  test_too_many_repos.py
too_many_repos/: __main__.py  cache.py  error.py  gist.py  log.py  repo.py  singleton.py  system.py  tmrconfig.py  tmrignore.py  too_many_repos.py  util.py
