[tool.poetry]
name = "too-many-repos"
version = "0.0.1"
description = ""
authors = ["Gilad Barnea <cr-gbarn-herolo@allot.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
rich = "^9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
