[tool.poetry]
name = "too-many-repos"
version = "0.0.2"
description = "A command-line tool for lazy people with too many projects"
authors = ["Gilad Barnea <giladbrn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"
rich = { git = "https://github.com/Textualize/rich.git", develop = true }
#rich = "^10.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = { path = "../pdbpp/", develop = true }
IPython = { path = "../ipython/", develop = true }
cyberbrain = { version = "^0.1.4", optional = true }
birdseye = { version = "^0.9.0", optional = true }

[tool.poetry.build]
generate-setup-file = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tmr = 'too_many_repos.too_many_repos:main'
